tests/fixtures/invalid/set_bitand_int.py
# Cannot use & between set and Int
x: set[int] = {1, 2} & 3
